--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -103,6 +103,7 @@ custom_executable(examples/advertisers debug_vect_advertiser)
 custom_executable(examples/offboard offboard_control)
 custom_executable(examples/offboard vel_ctrl_vec_pub)
 custom_executable(examples/offboard lidar_test_sub)
+custom_executable(examples/offboard img_3d_to_2d_proj)
 
 ############
 # Install ##
