--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -104,6 +104,7 @@ custom_executable(examples/offboard offboard_control)
 custom_executable(examples/offboard vel_ctrl_vec_pub)
 custom_executable(examples/offboard lidar_test_sub)
 custom_executable(examples/offboard img_3d_to_2d_proj)
+custom_executable(examples/offboard lidar_to_mmwave)
 
 ############
 # Install ##
